[tool.poetry]
name = "zakuchess"
version = "0.1.0"
description = "A daily chess challenge, where pieces are heroic-fantasy characters."
license = "GPL-3.0-or-later"
authors = ["Olivier Philippon <olivier@dunsap.com>"]
homepage = "https://github.com/olivierphi/zakuchess"
packages = [
    { include = "apps", from = "src" },
    { include = "lib", from = "src" },
    { include = "project", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
gunicorn = "^22.0.0"
django-alive = "^1.2.1"
chess = "^1.9.3"
django-htmx = "^1.13.0"
dominate = "^2.7.0"
dj-database-url = "^2.1.0"
requests = "^2.31.0"
django-axes = { extras = ["ipware"], version = "^6.1.1" }
whitenoise = "^6.5.0"
django-import-export = "^3.3.1"
msgspec = "^0.18.5"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
black = "^24.1.1"
ruff = "0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "^8.6.0"
types-requests = "^2.31.0.2"
django-extensions = "^3.2.3"
httpx = "^0.26.0" # only used in "scripts/download_assets.py" for parallel downloads
sqlite-utils = "^3.35.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
time-machine = "^2.13.0"


[tool.poetry.group.load-testing.dependencies]
locust = "^2.21.0"

[tool.black]
# @link https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
target-version = ['py311']

[tool.ruff]
# @link https://docs.astral.sh/ruff/configuration/
target-version = "py311"
ignore = ["E501"]
exclude = [
    "src/project/settings",
]
[tool.ruff.per-file-ignores]
"src/lib/chess_engines/sunfish/sunfish.py" = ["F841", "F821"]

[tool.ruff.lint]
select = [
    "F", # flake8
    "I", # isort
    # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "TCH001", 
    "TCH002", 
    "TCH003", 
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
combine-as-imports = true
known-first-party = ["apps", "lib", "project"]

[tool.ruff.lint.flake8-type-checking]
# https://docs.astral.sh/ruff/settings/#lintflake8-type-checking
quote-annotations = true
strict = true
runtime-evaluated-base-classes = ["msgspec.Struct"]


[tool.mypy]
# @link https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
python_version = "3.11"
mypy_path = "src/"
exclude = [
    '^src/project/settings/.*\.py$',
    '^src/apps/[^/]+/migrations/.*\.py$',
    '^src/lib/chess_engines/[^/]+/.*\.py$',
    '^locustfile\.py$',
    '^scripts/load_testing/*\.py$',
]
[[tool.mypy.overrides]]
module = [
    "django.*",
    "dominate.*",
    "import_export.*",
    "time_machine.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "src/apps/*/tests/",
    "src/project/tests/",
]
python_files = ["test_*.py"]
addopts = "--reuse-db"
DJANGO_SETTINGS_MODULE = "project.settings.test"

[tool.coverage.run]
# @link https://coverage.readthedocs.io/en/latest/excluding.html
# @link https://coverage.readthedocs.io/en/latest/source.html
omit = [
    # omit tests themselves from the coverage measure:
    "src/apps/*/tests/**/*.py",
    "src/project/tests/**/*.py",
    # also exclude Django settings:
    "src/project/settings/*.py",
]



[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
