[project]
name = "zakuchess"
version = "0.1.0"
description = "A daily chess challenge, where pieces are heroic-fantasy characters."
license = { text = "GPL-3.0-or-later" }
authors = [
    {name = "Olivier Philippon", email = "olivier@dunsap.com"},
]
readme = "README.md"

requires-python = ">=3.11"

dependencies= [
    # Django doesn't follow SemVer, so we need to specify the minor version:
    "Django==5.1.*",
    "gunicorn==22.*",
    "uvicorn[standard]==0.30.*",
    "uvicorn-worker==0.2.*",
    "django-alive==1.*",
    "chess==1.*",
    "django-htmx==1.*",
    "dominate==2.*",
    "dj-database-url==2.*",
    "requests==2.*",
    "django-axes[ipware]==6.*",
    "whitenoise==6.*",
    "django-import-export==4.*",
    "msgspec==0.18.*",
    "zakuchess",
    "authlib==1.*",
    "httpx==0.27.*",
    "django-google-fonts==0.0.3",
]


[project.optional-dependencies]
dev = [
    "python-dotenv==1.*",
    "ruff==0.6.*",
    "mypy==1.*",
    "pre-commit==3.*",
    "ipython==8.*",
    "types-requests==2.*",
    "django-extensions==3.*",
    "sqlite-utils==3.*",
    # N.B. As it turns out that Lichess' "Berserk" package misses some features we need,
    # such as the creation of correspondence Seeks... 
    # And as we had to wrap evey call in an `sync_to_async` anyway, which was not great... 
    # We only use  for its `types` module at the momemt.
    "berserk==0.13.*",
]
test = [
    "pytest==8.3.*",
    "pytest-django==4.*",
    "pytest-cov==4.*",
    "time-machine==2.*",
    "pytest-blockage==0.2.*",
    "pytest-asyncio==0.24.*",
    "pytest-httpx-blockage==0.0.8",
]
load-testing = [
    "locust==2.*",
]


[project.urls]
Website = "https://zakuchess.com"
Repository = "https://github.com/olivierphi/zakuchess"


[tool.uv]
package = false


[tool.ruff]
# @link https://docs.astral.sh/ruff/configuration/
target-version = "py311"
exclude = [
    "src/project/settings",
]

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "F", # flake8
    "I", # isort
    # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "TCH001", 
    "TCH002", 
    "TCH003", 
]
[tool.ruff.lint.per-file-ignores]
"src/project/settings/*" = ["F405"]
"src/lib/chess_engines/sunfish/sunfish.py" = ["F841", "F821"]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
combine-as-imports = true
known-first-party = ["apps", "lib", "project"]

[tool.ruff.lint.flake8-type-checking]
# https://docs.astral.sh/ruff/settings/#lintflake8-type-checking
quote-annotations = true
strict = true
runtime-evaluated-base-classes = ["msgspec.Struct"]


[tool.mypy]
# @link https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
python_version = "3.11"
mypy_path = "src/"
exclude = [
    '^src/project/settings/.*\.py$',
    '^src/apps/[^/]+/migrations/.*\.py$',
    '^src/lib/chess_engines/[^/]+/.*\.py$',
    '^locustfile\.py$',
    '^scripts/load_testing/*\.py$',
]
[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "django.*",
    "dominate.*",
    "import_export.*",
    "time_machine.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "src/apps/*/tests/",
    "src/project/tests/",
]
python_files = ["test_*.py"]
# pytest-django settings:
# https://pytest-django.readthedocs.io/
addopts = "--reuse-db"
DJANGO_SETTINGS_MODULE = "project.settings.test"
# pytest-asyncio settings:
# https://pytest-asyncio.readthedocs.io/en/stable/reference/configuration.html
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto" 
# pytest-blockage settings:
# https://github.com/rob-b/pytest-blockage
blockage = true 
# pytest-httpx-blockage settings:
# https://github.com/SlavaSkvortsov/pytest-httpx-blockage
blockage-httpx = true

[tool.coverage.run]
# @link https://coverage.readthedocs.io/en/latest/excluding.html
# @link https://coverage.readthedocs.io/en/latest/source.html
omit = [
    # omit tests themselves from the coverage measure:
    "src/apps/*/tests/**/*.py",
    "src/project/tests/**/*.py",
    # also exclude Django settings:
    "src/project/settings/*.py",
]
